# xcube-cmems

./: .editorconfig  .gitignore  CHANGES.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: unitest-workflow.yml
examples/notebooks/: cmems_ds_example.ipynb  cmems_example_JNB.ipynb
notebooks/: .gitignore  pydap-zarr-store.ipynb
src/xcube_cmems/: constants.py  store.py
test/: dataset_ids.json  sample_data.py  test_chunkstore.py  test_cmems.py  test_opendap_func.py  test_store.py  test_utils.py
xcube_cmems/: __init__.py  chunkstore.py  cmems.py  constants.py  csw-opendap-mapping.json  default_env_vars.py  plugin.py  store.py  utils.py  version.py
